# openspp-modules

./: .copier-answers.yml  .eslintrc.yml  .gitbook.yaml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .ruff.toml  .snyk  =2.4.0  COPYRIGHT  README.md  code_of_conduct.md  farmer-requirements.txt  openg2p-requirements.txt  openspp-requirements.txt  requirements.txt  sonar-project.properties  sp-mis-requirements.txt  test-requirements.txt  vulnerability_disclosure_policy.md
.github/: auto-assign.yml  auto_assign.yml  dependabot.yml  pull_request_template.md
g2p_connect_demo/: README.rst  __manifest__.py
g2p_connect_demo1/: README.rst  __init__.py  __manifest__.py
g2p_entitlement_cash/: README.md  README.rst  __manifest__.py
g2p_programs/: README.md  README.rst  __manifest__.py
g2p_registry_base/: README.md  __init__.py  __manifest__.py
g2p_registry_group/: README.md  __init__.py  __manifest__.py
g2p_registry_individual/: README.md  __manifest__.py
g2p_registry_membership/: README.md  __manifest__.py
openspp-api/: README.md  requirements.txt  test-requirements.txt
openspp-base/: .pylintrc-mandatory  .sourcery.yaml  test-requirements.txt  vulnerability_disclosure_policy.md
openspp-demo/: .copier-answers.yml  .flake8  .pre-commit-config.yaml  COPYRIGHT  README.md  license_header.txt  requirements.txt
openspp-program/: .prettierrc.yml  README.md
openspp_demo/: README.md
scripts/: lint_and_fix.py  sync_issue_to_odoo.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
spp_advanced_targetting/: __manifest__.py
spp_api/: README.rst  __init__.py  __manifest__.py  config.py  tools.py
spp_api_records/: README.rst  __manifest__.py
spp_area/: README.md  README.rst  __init__.py  __manifest__.py
spp_area_gis/: README.rst  __manifest__.py
spp_attendance/: __manifest__.py
spp_attendance_dswd/: __manifest__.py
spp_audit_config/: README.rst  __init__.py  __manifest__.py
spp_audit_log/: README.rst  __manifest__.py
spp_audit_post/: README.rst  __manifest__.py
spp_auto_update_entitlements/: README.rst  __manifest__.py
spp_base/: README.rst  __manifest__.py
spp_base_api/: README.rst  __manifest__.py
spp_base_demo/: README.md  README.rst  __init__.py  __manifest__.py
spp_base_gis/: README.rst  __init__.py  __manifest__.py  expression.py  fields.py  operators.py
spp_base_gis_demo/: README.rst  __manifest__.py
spp_base_gis_rest/: README.rst  __manifest__.py
spp_base_setting/: README.rst  __manifest__.py
spp_basic_cash_entitlement_spent/: README.rst  __manifest__.py
spp_change_request/: README.rst  __manifest__.py
spp_change_request_add_child/: __manifest__.py
spp_change_request_add_children_demo/: README.rst  __manifest__.py
spp_change_request_add_farmer/: README.rst  __manifest__.py
spp_change_request_add_group/: __manifest__.py
spp_change_request_change_info/: __manifest__.py
spp_change_request_change_location/: __manifest__.py
spp_change_request_deactivate/: __manifest__.py
spp_change_request_move/: __manifest__.py
spp_change_request_split/: __manifest__.py
spp_consent/: README.md  README.rst  __init__.py  __manifest__.py
spp_country_office/: __manifest__.py
spp_custom_field/: README.md  README.rst  __manifest__.py
spp_custom_field_custom_filter/: README.rst  __manifest__.py
spp_custom_field_recompute_daily/: README.rst  __manifest__.py
spp_custom_fields_ui/: README.md  README.rst  __init__.py  __manifest__.py
spp_custom_filter/: README.rst  __manifest__.py
spp_custom_filter_ui/: README.rst  __manifest__.py
spp_cycle_attendance_compliance/: __init__.py  __manifest__.py
spp_dashboard/: README.md  README.rst  __init__.py  __manifest__.py
spp_dashboard_base/: __manifest__.py
spp_data_export/: README.rst  __manifest__.py
spp_dci_api_server/: README.rst  __manifest__.py
spp_demo/: README.rst  __init__.py  __manifest__.py
spp_dms/: README.rst  __manifest__.py
spp_eligibility_sql/: README.rst  __manifest__.py
spp_eligibility_tags/: README.rst  __init__.py  __manifest__.py
spp_encryption/: README.rst  __manifest__.py
spp_ent_trans/: README.rst  __manifest__.py
spp_entitlement_basket/: README.rst  __manifest__.py
spp_entitlement_cash/: README.rst  __manifest__.py
spp_entitlement_in_kind/: README.md  README.rst  __manifest__.py
spp_ethnic_group/: __manifest__.py
spp_event_data/: README.rst  __manifest__.py
spp_event_data_program_membership/: README.rst  __manifest__.py
spp_event_demo/: README.rst  __manifest__.py
spp_event_house_visit/: __manifest__.py
spp_event_phone_survey/: README.rst  __manifest__.py
spp_exclusion_filter/: README.rst  __manifest__.py
spp_farmer_registry_base/: README.rst  __manifest__.py
spp_farmer_registry_dashboard/: README.rst  __init__.py  __manifest__.py
spp_farmer_registry_default_ui/: __manifest__.py
spp_farmer_registry_demo/: README.rst  __manifest__.py
spp_farmer_registry_laos/: README.rst  __manifest__.py
spp_grm/: __manifest__.py
spp_idpass/: README.md  README.rst  __init__.py  __manifest__.py
spp_idqueue/: README.rst  __manifest__.py
spp_import_crvs_beneficiary/: __manifest__.py
spp_import_dci_api/: README.rst  __manifest__.py
spp_import_match/: README.rst  __init__.py  __manifest__.py
spp_irrigation/: README.rst  __manifest__.py
spp_land_record/: README.rst  __manifest__.py
spp_manual_eligibility/: README.rst  __manifest__.py
spp_manual_entitlement/: README.rst  __manifest__.py
(+2173 files in other folders)
