[project]
name = "odoo-addons-openspp-openspp-modules"
version = "17.0.20240821.0"
dependencies = [
    "odoo-addon-g2p_connect_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_api>=17.0dev,<17.1dev",
    "odoo-addon-spp_api_records>=17.0dev,<17.1dev",
    "odoo-addon-spp_area>=17.0dev,<17.1dev",
    "odoo-addon-spp_area_gis>=17.0dev,<17.1dev",
    "odoo-addon-spp_audit_config>=17.0dev,<17.1dev",
    "odoo-addon-spp_audit_log>=17.0dev,<17.1dev",
    "odoo-addon-spp_audit_post>=17.0dev,<17.1dev",
    "odoo-addon-spp_auto_update_entitlements>=17.0dev,<17.1dev",
    "odoo-addon-spp_base>=17.0dev,<17.1dev",
    "odoo-addon-spp_base_api>=17.0dev,<17.1dev",
    "odoo-addon-spp_base_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_base_gis>=17.0dev,<17.1dev",
    "odoo-addon-spp_base_gis_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_base_gis_rest>=17.0dev,<17.1dev",
    "odoo-addon-spp_base_setting>=17.0dev,<17.1dev",
    "odoo-addon-spp_basic_cash_entitlement_spent>=17.0dev,<17.1dev",
    "odoo-addon-spp_change_request>=17.0dev,<17.1dev",
    "odoo-addon-spp_change_request_add_children_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_change_request_add_farmer>=17.0dev,<17.1dev",
    "odoo-addon-spp_change_request_change_info>=17.0dev,<17.1dev",
    "odoo-addon-spp_consent>=17.0dev,<17.1dev",
    "odoo-addon-spp_custom_field>=17.0dev,<17.1dev",
    "odoo-addon-spp_custom_field_custom_filter>=17.0dev,<17.1dev",
    "odoo-addon-spp_custom_field_recompute_daily>=17.0dev,<17.1dev",
    "odoo-addon-spp_custom_fields_ui>=17.0dev,<17.1dev",
    "odoo-addon-spp_custom_filter>=17.0dev,<17.1dev",
    "odoo-addon-spp_custom_filter_ui>=17.0dev,<17.1dev",
    "odoo-addon-spp_data_export>=17.0dev,<17.1dev",
    "odoo-addon-spp_dci_api_server>=17.0dev,<17.1dev",
    "odoo-addon-spp_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_dms>=17.0dev,<17.1dev",
    "odoo-addon-spp_eligibility_sql>=17.0dev,<17.1dev",
    "odoo-addon-spp_eligibility_tags>=17.0dev,<17.1dev",
    "odoo-addon-spp_encryption>=17.0dev,<17.1dev",
    "odoo-addon-spp_ent_trans>=17.0dev,<17.1dev",
    "odoo-addon-spp_entitlement_basket>=17.0dev,<17.1dev",
    "odoo-addon-spp_entitlement_cash>=17.0dev,<17.1dev",
    "odoo-addon-spp_entitlement_in_kind>=17.0dev,<17.1dev",
    "odoo-addon-spp_ethnic_group>=17.0dev,<17.1dev",
    "odoo-addon-spp_event_data>=17.0dev,<17.1dev",
    "odoo-addon-spp_event_data_program_membership>=17.0dev,<17.1dev",
    "odoo-addon-spp_event_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_exclusion_filter>=17.0dev,<17.1dev",
    "odoo-addon-spp_farmer_registry_base>=17.0dev,<17.1dev",
    "odoo-addon-spp_farmer_registry_dashboard>=17.0dev,<17.1dev",
    "odoo-addon-spp_farmer_registry_demo>=17.0dev,<17.1dev",
    "odoo-addon-spp_idpass>=17.0dev,<17.1dev",
    "odoo-addon-spp_idqueue>=17.0dev,<17.1dev",
    "odoo-addon-spp_import_dci_api>=17.0dev,<17.1dev",
    "odoo-addon-spp_import_match>=17.0dev,<17.1dev",
    "odoo-addon-spp_irrigation>=17.0dev,<17.1dev",
    "odoo-addon-spp_land_record>=17.0dev,<17.1dev",
    "odoo-addon-spp_manual_eligibility>=17.0dev,<17.1dev",
    "odoo-addon-spp_manual_entitlement>=17.0dev,<17.1dev",
    "odoo-addon-spp_oauth>=17.0dev,<17.1dev",
    "odoo-addon-spp_openid_vci>=17.0dev,<17.1dev",
    "odoo-addon-spp_openid_vci_group>=17.0dev,<17.1dev",
    "odoo-addon-spp_openid_vci_individual>=17.0dev,<17.1dev",
    "odoo-addon-spp_pmt>=17.0dev,<17.1dev",
    "odoo-addon-spp_pos>=17.0dev,<17.1dev",
    "odoo-addon-spp_program_id>=17.0dev,<17.1dev",
    "odoo-addon-spp_programs>=17.0dev,<17.1dev",
    "odoo-addon-spp_programs_compliance_criteria>=17.0dev,<17.1dev",
    "odoo-addon-spp_programs_sp>=17.0dev,<17.1dev",
    "odoo-addon-spp_registrant_import>=17.0dev,<17.1dev",
    "odoo-addon-spp_registrant_tag>=17.0dev,<17.1dev",
    "odoo-addon-spp_registry_data_source>=17.0dev,<17.1dev",
    "odoo-addon-spp_registry_group_hierarchy>=17.0dev,<17.1dev",
    "odoo-addon-spp_scan_id_document>=17.0dev,<17.1dev",
    "odoo-addon-spp_service_point_device>=17.0dev,<17.1dev",
    "odoo-addon-spp_service_points>=17.0dev,<17.1dev",
    "odoo-addon-spp_starter>=17.0dev,<17.1dev",
    "odoo-addon-spp_user_roles>=17.0dev,<17.1dev",
    "odoo-addon-theme_openspp_muk>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
